--- a/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
+++ b/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
@@ -53,6 +53,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form 1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form 1.Designer.cs">
+      <DependentUpon>Form 1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form 1.resx">
+      <DependentUpon>Form 1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form Login.resx">
       <DependentUpon>Form Login.cs</DependentUpon>
     </EmbeddedResource>
