--- a/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
+++ b/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
@@ -57,6 +57,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\DBConfig.cs" />
+    <Compile Include="FormBarangKeluar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBarangKeluar.Designer.cs">
+      <DependentUpon>FormBarangKeluar.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormBarangMasuk.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormBarangKeluar.resx">
+      <DependentUpon>FormBarangKeluar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormBarangMasuk.resx">
       <DependentUpon>FormBarangMasuk.cs</DependentUpon>
     </EmbeddedResource>
