--- a/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
+++ b/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
@@ -87,6 +87,12 @@
     <Compile Include="Form Login.Designer.cs">
       <DependentUpon>Form Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormRiwayat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRiwayat.Designer.cs">
+      <DependentUpon>FormRiwayat.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gambar.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form Login.resx">
       <DependentUpon>Form Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRiwayat.resx">
+      <DependentUpon>FormRiwayat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Gambar.resx">
       <Generator>ResXFileCodeGenerator</Generator>
