--- a/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
+++ b/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
@@ -76,6 +76,12 @@
     <Compile Include="FormBarangMasuk.Designer.cs">
       <DependentUpon>FormBarangMasuk.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormBeranda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBeranda.Designer.cs">
+      <DependentUpon>FormBeranda.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDataBarang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +127,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormBarangMasuk.resx">
       <DependentUpon>FormBarangMasuk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormBeranda.resx">
+      <DependentUpon>FormBeranda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormDataBarang.resx">
       <DependentUpon>FormDataBarang.cs</DependentUpon>
@@ -173,6 +182,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Logo Amikom %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\image_Beranda.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
