--- a/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
+++ b/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
@@ -81,6 +81,12 @@
     <Compile Include="FormDataBarang.Designer.cs">
       <DependentUpon>FormDataBarang.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormKategoriBarang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormKategoriBarang.Designer.cs">
+      <DependentUpon>FormKategoriBarang.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMaster.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormDataBarang.resx">
       <DependentUpon>FormDataBarang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormKategoriBarang.resx">
+      <DependentUpon>FormKategoriBarang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMaster.resx">
       <DependentUpon>FormMaster.cs</DependentUpon>
