--- a/InventoriApp-Karanglewas/App.config
+++ b/InventoriApp-Karanglewas/App.config
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="InventoriApp_Karanglewas.Properties.Settings.InventoriAppConnectionString"
+            connectionString="Data Source=(local);Initial Catalog=InventoriApp;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
