--- a/InventoriApp-Karanglewas/App.config
+++ b/InventoriApp-Karanglewas/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="InventoriApp_Karanglewas.Properties.Settings.InventoriAppConnectionString"
-            connectionString="Data Source=(local);Initial Catalog=InventoriApp;Integrated Security=True"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=InventoriApp;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
