--- a/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
+++ b/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
@@ -21,7 +21,8 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>3</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,6 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
@@ -62,12 +64,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config\DBConfig.cs" />
-    <Compile Include="CrystalReport1.cs">
+    <Compile Include="barangMasukReport.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CrystalReport1.rpt</DependentUpon>
+      <DependentUpon>barangMasukReport.rpt</DependentUpon>
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Config\DBConfig.cs" />
+    <Compile Include="dataBarangReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dataBarangReport.Designer.cs">
+      <DependentUpon>dataBarangReport.cs</DependentUpon>
     </Compile>
     <Compile Include="dbConfig.cs" />
     <Compile Include="FormAdmin.cs">
@@ -105,6 +113,12 @@
     </Compile>
     <Compile Include="FormKategoriBarang.Designer.cs">
       <DependentUpon>FormKategoriBarang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormLaporan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLaporan.Designer.cs">
+      <DependentUpon>FormLaporan.cs</DependentUpon>
     </Compile>
     <Compile Include="FormMaster.cs">
       <SubType>Form</SubType>
@@ -145,17 +159,38 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>InventoriAppDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="laporanDataBarang.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>laporanDataBarang.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportBarangKeluar.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ReportBarangKeluar.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="reportdtBarang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reportdtBarang.Designer.cs">
+      <DependentUpon>reportdtBarang.cs</DependentUpon>
+    </Compile>
     <Compile Include="reportViewer.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="reportViewer.Designer.cs">
       <DependentUpon>reportViewer.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="CrystalReport1.rpt">
+    <EmbeddedResource Include="barangMasukReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>CrystalReport1.cs</LastGenOutput>
+      <LastGenOutput>barangMasukReport.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dataBarangReport.resx">
+      <DependentUpon>dataBarangReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormAdmin.resx">
       <DependentUpon>FormAdmin.cs</DependentUpon>
@@ -175,6 +210,9 @@
     <EmbeddedResource Include="FormKategoriBarang.resx">
       <DependentUpon>FormKategoriBarang.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormLaporan.resx">
+      <DependentUpon>FormLaporan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMaster.resx">
       <DependentUpon>FormMaster.cs</DependentUpon>
     </EmbeddedResource>
@@ -192,6 +230,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Gambar.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="laporanDataBarang.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>laporanDataBarang.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -202,6 +244,13 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ReportBarangKeluar.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ReportBarangKeluar.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reportdtBarang.resx">
+      <DependentUpon>reportdtBarang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="reportViewer.resx">
       <DependentUpon>reportViewer.cs</DependentUpon>
     </EmbeddedResource>
