--- a/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
+++ b/InventoriApp-Karanglewas/InventoriApp-Karanglewas.csproj
@@ -64,19 +64,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="barangMasukReport.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>barangMasukReport.rpt</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Config\DBConfig.cs" />
-    <Compile Include="dataBarangReport.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="dataBarangReport.Designer.cs">
-      <DependentUpon>dataBarangReport.cs</DependentUpon>
-    </Compile>
     <Compile Include="dbConfig.cs" />
     <Compile Include="FormAdmin.cs">
       <SubType>Form</SubType>
@@ -120,6 +108,24 @@
     <Compile Include="FormLaporan.Designer.cs">
       <DependentUpon>FormLaporan.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormLaporanBarangKeluar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLaporanBarangKeluar.Designer.cs">
+      <DependentUpon>FormLaporanBarangKeluar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormLaporanBarangMasuk.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLaporanBarangMasuk.Designer.cs">
+      <DependentUpon>FormLaporanBarangMasuk.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormLaporanDataBarang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLaporanDataBarang.Designer.cs">
+      <DependentUpon>FormLaporanDataBarang.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMaster.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,6 +165,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>InventoriAppDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="laporanBarangKeluar.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>laporanBarangKeluar.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="laporanBarangMasuk.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>laporanBarangMasuk.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="laporanDataBarang.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -167,37 +185,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReportBarangKeluar.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ReportBarangKeluar.rpt</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ReportDataBarang.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ReportDataBarang.rpt</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="reportdtBarang.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="reportdtBarang.Designer.cs">
-      <DependentUpon>reportdtBarang.cs</DependentUpon>
-    </Compile>
-    <Compile Include="reportViewer.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="reportViewer.Designer.cs">
-      <DependentUpon>reportViewer.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="barangMasukReport.rpt">
-      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>barangMasukReport.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="dataBarangReport.resx">
-      <DependentUpon>dataBarangReport.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FormAdmin.resx">
       <DependentUpon>FormAdmin.cs</DependentUpon>
     </EmbeddedResource>
@@ -219,6 +206,15 @@
     <EmbeddedResource Include="FormLaporan.resx">
       <DependentUpon>FormLaporan.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormLaporanBarangKeluar.resx">
+      <DependentUpon>FormLaporanBarangKeluar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLaporanBarangMasuk.resx">
+      <DependentUpon>FormLaporanBarangMasuk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLaporanDataBarang.resx">
+      <DependentUpon>FormLaporanDataBarang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMaster.resx">
       <DependentUpon>FormMaster.cs</DependentUpon>
     </EmbeddedResource>
@@ -236,6 +232,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Gambar.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="laporanBarangKeluar.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>laporanBarangKeluar.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="laporanBarangMasuk.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>laporanBarangMasuk.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="laporanDataBarang.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>laporanDataBarang.cs</LastGenOutput>
@@ -250,20 +254,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ReportBarangKeluar.rpt">
-      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>ReportBarangKeluar.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ReportDataBarang.rpt">
-      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>ReportDataBarang.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="reportdtBarang.resx">
-      <DependentUpon>reportdtBarang.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="reportViewer.resx">
-      <DependentUpon>reportViewer.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="InventoriAppDataSet.xsc">
       <DependentUpon>InventoriAppDataSet.xsd</DependentUpon>
     </None>
